--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>14.0.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
